asm-authorizationpolicy-service-a/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-a
  namespace: service-a
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/client-1/sa/client-1"]
    #- source:
    #    namespaces: ["client-1"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/*"]
